@@ -1,4 +1,9 @@
 2002-07-02  Deepa Natarajan  <deepa.natarajan@wipro.com> 
+ 
+	* logrtns.[ch], monitor.c: Rewrote ReadPageDown() and 
+	mon_read_new_lines() to update the logs that are monitored.
+     
+2002-07-02  Deepa Natarajan  <deepa.natarajan@wipro.com> 
 
 	* logview.c: enable restore session.
 
